Break cyclick dependency

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
-  "org.eclipse.ecf-R-Release_HEAD-sdk_feature-113_2013-06-05_17-43-35.tar.bz2": 7f668c4ce3d9829c7b4c2a7c58d73dba24e85d4b
+  org.eclipse.ecf-R-Release_HEAD-sdk_feature-113_2013-06-05_17-43-35.tar.bz2: 7f668c4ce3d9829c7b4c2a7c58d73dba24e85d4b
+  eclipse-ecf-core-3.6.1-1.0-omv2014.0.noarch.rpm: 4213afd1544e80b44d627fb6d4b59a2506a5cfdd
