--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   org.eclipse.ecf-R-Release_HEAD-sdk_feature-113_2013-06-05_17-43-35.tar.bz2: 7f668c4ce3d9829c7b4c2a7c58d73dba24e85d4b
+  org.eclipse.ecf-R-Release_HEAD-sdk_feature-144_2014-11-16_21-26-19.tar.bz2: 5be0a59edb9f30ffb8ae0b0802a04df872030d63
